# sd-homelessness

./: .gitignore  .mcp.json  CLAUDE.md  README.md  pyproject.toml  render.yaml  requirements.txt
api/: main.py  mcp_server.py  models.py  queries.py
dashboard/: app.py
data/aggregated/: homelessness_spending.parquet  pit_geography.parquet  pit_subpopulations.parquet  pit_trends.parquet
data/processed/: pit_data.parquet
data/raw/: pit_counts.csv  pit_geography.csv  pit_subpopulations.csv  sources.md
pipeline/: build.py  ingest.py  transform.py  validate.py
